@@ -1,4 +1,5 @@
 - fixed decorators produced with @decorator other non-functions
+- optimized @ignore and @silent
 
 0.5.2
 - added i?without()
